fixed the issue with cart link and user account link not aligning properly

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,9 +14,6 @@ html {
     color: black !important;
 }
 
-.list-inline {
-    display: inline-flex;
-}
 /*------------------------------------- Media Queries */
 
 @media (min-width: 1200px) {
